Removed jdk requirement