@@ -6,7 +6,7 @@
 
     <groupId>dev.kuku</groupId>
     <artifactId>vfl_java</artifactId>
-    <version>0.0.1</version>
+    <version>0.1.0</version>
     <dependencies>
         <dependency>
             <groupId>org.json</groupId>
@@ -62,26 +62,4 @@
             <version>1.18.38</version>
         </dependency>
     </dependencies>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>24</source>
-                    <target>24</target>
-                    <compilerArgs>
-                        <arg>--enable-preview</arg>
-                    </compilerArgs>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-
-    <properties>
-        <maven.compiler.source>24</maven.compiler.source>
-        <maven.compiler.target>24</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
-
 </project>
